# tetrica-test-task

./: .gitignore  pyproject.toml  Сигналы для страницы оборудования.xlsx
task1/: solution.py  test.py
task2/: solution.py
