[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]

[tool.poetry]
name = "juniors_interview"
version = "0.1.0"
description = ""
authors = ["KirGorbunov <KirGorbunov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wikipedia-api = "^0.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
